# noise_decomp

./: .gitignore  README.md  build_cython.py  pyproject.toml  setup_cython.py
.github/workflows/: ci.yml
examples/: demo.py
src/noise_decomp/: __init__.py  _cnoise.c  _cnoise.pxd  _cnoise.pyx  cli.py
src/noise_decomp.egg-info/: PKG-INFO
