[build-system]
requires = ["setuptools>=68", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "noise-decomp"
version = "0.1.0"
description = "Dual-reporter intrinsic/extrinsic noise decomposition"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy>=1.22"]
authors = [{ name = "You" }]

[project.scripts]
noise-decomp = "noise_decomp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

